Bug 726761 - don't check count sums when deserializing SampleSets; r=cjones